Upsert implementation - added conflictProperties